schema/testdata/errors/reserved_model_names.keel
//expect-error:7:12:NamingError:Reserved name 'Query'
model Query {
}
